set up basic html/css

--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="/js/main.js"></script>
+    <!--<link href="../bootstrap-5.0.2-dist/css/bootstrap.min.css">-->
   </head>
   <body>
-    <nav>
-      <ul>
-
-      </ul>
-    </nav>
+    <section class="layout">
+      <div class="sidebar">
+        <div class="menubox">
+          12345
+        </div>
+      </div>
+      <div class="mainsection">
+        <div class="titlebox">
+          <h1 class="title">Loading Jigz Deity Generator...</h1>
+        </div>
+      </div>
+    </section>
     
 
   </body>
+  <footer>
 
+
+  </footer>
 
 </html>
