adding js dom handlers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="/js/main.js"></script>
+    <script src="/deity_generator/js/main.js" typ="text/javascript"></script>
   </head>
   <body>
     <main class="layout crt">
@@ -21,10 +21,10 @@
             <h1>Loading Jigz Deity Generator...</h1>
           </div>
           <ul class="statblock">
-              <li id="deityname">NAME:</li>
-              <li id="dietyage">AGE:</li>     
-              <li id="dietyalign">ALIGNMENT:</li>
-              <li id="dietytype">TYPE:</li>         
+              <li class="deityname">NAME:</li>
+              <li class="deityage">AGE:</li>     
+              <li class="deityalign">ALIGNMENT:</li>
+              <li class="deitytype">TYPE:</li>         
           </ul>
         </div>
       </section>
@@ -34,12 +34,12 @@
 
   </body>
   <footer>
-    <ul>
-      <li>About</li>
-      <li>Github</li>
-      <li>Liscencing</li>
+    <ul class="infolist">
+      <li><a href="index.html">About</a></li>
+      <li><a href="index.html">Github</a></li>
+      <li><a href="index.html">Liscencing</a></li>
     </ul>
 
   </footer>
-
+ 
 </html>
