update visuals/clean up js randomizer

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
             <h1>Loading Jigz Deity Generator...</h1>
           </div>
           <ul class="statblock">
-              <li id="deityname">NAME:</li>
-              <li id="deityage">AGE:</li>     
-              <li id="deityalign">ALIGNMENT:</li>
-              <li id="deitytype">TYPE:</li>         
+              <li>NAME:<p id="deityname">&nbsp;&nbsp;----</p></li>
+              <li>AGE:<p id="deityage">&nbsp;&nbsp;----</p></li>     
+              <li>ALIGNMENT: <p id="deityalign">&nbsp;&nbsp;----</p></li>
+              <li>TYPE: <p id="deitytype">&nbsp;&nbsp;----</p></li>         
           </ul>
+            <p id="deitydecription">----</p>
         </div>
       </section>
     
