adjusted statblock order

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
           </div>
           <ul class="statblock">
               <li>NAME:<p id="deityname">&nbsp;&nbsp;----</p></li>
-              <li>AGE:<p id="deityage">&nbsp;&nbsp;----</p></li>     
-              <li>ALIGNMENT: <p id="deityalign">&nbsp;&nbsp;----</p></li>
-              <li>TYPE: <p id="deitytype">&nbsp;&nbsp;----</p></li>         
+              <li>TITLE:</li>
+              <li>TYPE: <p id="deitytype">&nbsp;&nbsp;----</p></li>  
+              <li>ALIGNMENT: <p id="deityalign">&nbsp;&nbsp;----</p></li> 
+              <li>AGE: <p id="deityage">&nbsp;&nbsp;----</p></li>
           </ul>
-            <p id="deitydecription">----</p>
         </div>
       </section>
     
