--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <h1>Loading Jigz Deity Generator...</h1>
           </div>
           <ul class="statblock">
-              <li>NAME:<p id="deityname">&nbsp;&nbsp;----</p></li>
-              <li>TITLE:</li>
-              <li>TYPE: <p id="deitytype">&nbsp;&nbsp;----</p></li>  
-              <li>ALIGNMENT: <p id="deityalign">&nbsp;&nbsp;----</p></li> 
-              <li>AGE: <p id="deityage">&nbsp;&nbsp;----</p></li>
+              <li>NAME:<p id="deityname">&nbsp;&nbsp;-----</p></li>
+              <li>TITLE:<p id="deitytitle">&nbsp;&nbsp;-----</P></li>
+              <li>TYPE: <p id="deitytype">&nbsp;&nbsp;-----</p></li>  
+              <li>ALIGNMENT: <p id="deityalign">&nbsp;&nbsp;-----</p></li> 
+              <li>AGE: <p id="deityage">&nbsp;&nbsp;-----</p></li>
           </ul>
         </div>
       </section>
